# infinite-adventure

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
client/: Cargo.toml  lib.rs  package.json
client/src/: index.ts
game/: Anchor.toml
game/programs/infinite-adventure/: Cargo.toml
game/programs/infinite-adventure/src/: lib.rs
game/programs/infinite-adventure/src/state/: mod.rs
programs/infinite-adventure/: Cargo.toml
programs/infinite-adventure/src/: constants.rs  error.rs  lib.rs
programs/infinite-adventure/src/instructions/: mod.rs
programs/infinite-adventure/src/state/: mod.rs
programs/infinite-adventure/tests/: test_initialize.rs
src/: index.ts
