[package]
name = "infinite-adventure"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "infinite_adventure"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = "0.31.1"
oorandom = "11.1.3"

[dev-dependencies]
solana-program = "~2.1"
